Fix line breaks in table

--- a/content/_assets/styles/custom.css
+++ b/content/_assets/styles/custom.css
@@ -356,12 +356,6 @@ Spectral Light
 .england-coinage-table td:first-child {
   width: 10rem;
 }
-.essayone-table td:last-child {
-  width: 35%;
-}
-.essayone-table td:nth-child(2) {
-  width: 25%;
-}
 
 /* FOOTNOTES
 ============================================================================= */
